fix: companies logo layout problem

--- a/site/components/companiesPage/companiesPage.less
+++ b/site/components/companiesPage/companiesPage.less
@@ -24,14 +24,6 @@
   }
 }
 
-@media (max-width: 1320px) {
-  .companies {
-    .company {
-      width: 50%;
-    }
-  }
-}
-
 @media (max-width: 768px) {
   .companies-page-container {
     .companies-container {
